# AudioVideoDemo

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: out2.h264  part.h264  song.mv
app/src/main/res/drawable/: selector_record_icon.xml
app/src/main/res/layout/: activity_a_a_c.xml  activity_ar.xml  activity_audio_encode_decode.xml  activity_audio_mv_flow.xml  activity_camera1.xml  activity_camera2.xml  activity_camera_reuse.xml  activity_camera_x.xml  activity_client_live_chat.xml  activity_client_screen.xml  activity_h264_encode.xml  activity_h264_parser.xml  (+11 more)
bilibili/: CMakeLists.txt  build.gradle
bilibili/src/main/: AndroidManifest.xml
bilibili/src/main/cpp/: bilibili-lib.cpp  native-lib.cpp
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: ffmpeg-lib.cpp
giflib/: CMakeLists.txt  build.gradle
giflib/src/main/: AndroidManifest.xml
giflib/src/main/cpp/: native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt  build.gradle
jni/src/androidTest/java/com/blood/jni/: ExampleInstrumentedTest.java
jni/src/main/: AndroidManifest.xml
jni/src/main/cpp/: native-lib.cpp
jni/src/main/java/com/blood/jni/: JniActivity.java
jni/src/main/res/layout/: activity_jni.xml
jni/src/test/java/com/blood/jni/: ExampleUnitTest.java
x264_rtmp/: CMakeLists.txt  build.gradle
x264_rtmp/src/main/: AndroidManifest.xml
x264_rtmp/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  VideoChannel.cpp  VideoChannel.h  logutil.h  x264rtmp-lib.cpp
x264_rtmp/src/main/cpp/faac/arm64-v8a/lib/: libfaac.la
x264_rtmp/src/main/cpp/util/: JavaCallHelper.cpp  JavaCallHelper.h
x264_rtmp/src/main/java/com/blood/x264_rtmp/: X264RtmpActivity.kt
x264_rtmp/src/main/java/com/blood/x264_rtmp/channel/: AudioChannel.java  VideoChannel.java
x264_rtmp/src/main/java/com/blood/x264_rtmp/push/: LivePusher.java
x264_rtmp/src/main/java/com/blood/x264_rtmp/util/: FileUtil.java  ImageUtil.java
(+105 files in other folders)
